added partials - header, footer, book view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,12 @@
   </head>
 
   <body>
-   <div class="container">
-
+  <%= render 'layouts/navbar' %>
+  <div class="container">
     <%= yield %>
-   </div>
+    </div>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
