--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
-<nav class="navbar fixed-bottom bg-light">
+<nav class="navbar fixed-bottom navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Fixed bottom</a>
+    <a class="navbar-brand" href="#">BookMe</a>
   </div>
 </nav>
