--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,10 +9,13 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">My Books</a>
+          <a class="nav-link" href="#">My Rentals</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#">Add Book</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="<%= new_user_session_path %>">Log in</a>
         </li>
       </ul>
     </div>
