added functionality to navbar, changed entire navbar structure - using link_to over a tag

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
-<nav class="navbar fixed-bottom navbar-dark bg-dark">
+<%# <nav class="navbar fixed-bottom">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">BookMe</a>
   </div>
-</nav>
+</nav> %>
