--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,10 +1,7 @@
-// Specific CSS for your home-page
 div {
-  background-color: #1d3557;
+  background-color: #1D3557;
   justify-content: absolute;
-
 }
-
 .image1 {
   background-image: url(https://images.unsplash.com/photo-1561871733-40a3338b8cb4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=770&q=80);
   height: 100vh;
@@ -15,31 +12,27 @@ div {
   position: absolute;
   margin-left: 0; margin-right: 0;
 }
-
 .b-container {
   margin-top: 100px;
   display: flex;
   flex-direction: column;
   // min-height: 100%;
-
   background-color: var(--color-background);
   color: var(--color-text-body);
   line-height: var(--line-height-body);
   font-family: var(--font-family-sans);
-
   button {
     width: 160px;
     margin-top: 15px;
     margin-left: 100px;
     font-family: 'Roboto regular', sans-serif;
     font-weight: regular;
-    background-color: #ffba08;
+    background-color: #FFBA08;
     color: black;
     border-radius: 100px;
     // box-shadow: 10%;
   }
 }
-
 body{
   h1 {
     color: white;
@@ -51,11 +44,6 @@ body{
     font-weight: 45px;
     line-height: 1.2;
   }
-
-
-.navbar {
-  background-color: #ACB1D6;
-
   p {
     color: white;
     margin-left: 100px;
@@ -63,17 +51,21 @@ body{
     font-size: 20px;
   }
 }
-
 .navbar > .container-fluid {
   min-height: 2rem;
-  background-color: #563d7c;
+  background-color: #563D7C;
   box-shadow: 0 0.5rem 1rem rgba(0,0,0,.05), inset 0 -1px 0 rgba(0,0,0,.1);
-
-
   .sticky {
     position: fixed;
     top: 0;
     // width: 100%;
   }
 }
+.navbar-expand-lg .navbar-collapse {
+  background-color: #563D7C;
+}
+a.nav-link{
+  color: white;
+  background-color:#563D7C ;
+  text-decoration: none;
 }
