--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1>Welcome to Book Me!</h1>
-<button class="btn btn-primary">Find a book</button>
+<div class="container">
+  <div clas="image1"></div>
+    <h1>Welcome to Book Me!</h1>
+    <p>Unlock Worlds Through Book Rentals</p>
+    <%# <button class="btn btn-primary">Find a book</button> %>
+    <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
+  Find a book
+</button>
+</div>
