create a new book

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,11 +1,11 @@
 <h1>POST A BOOK TO BE RENTED</h1>
 
-<%= simple_form_for [@book] do |f| %>
-  <%= f.input :name %>
+<%= simple_form_for @book do |f| %>
+  <%= f.input :title %>
   <%= f.input :author %>
-  <%= f.submit class: "btn btn-warning m-2" %>
+  <%= f.submit class: "btn btn-warning" %>
 <% end %>
 
-<button class="btn btn-dark  m-2">
-  <%= link_to 'ALL BOOKS', books_path %>
+<button class="btn btn-dark">
+  <%= link_to 'ALL BOOKS', @books %>
 </button>
