--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,6 @@
 <h1>ALL BOOKS</h1>
 
-<% @books.each |book| %>
+<% @books.each do |book| %>
   <%= link_to book.title, book_path(book) %>
   <%= book.author %>
   <%  book.user_id %>
@@ -9,4 +9,3 @@
 <button class="btn btn-success">
   <%= link_to 'POST A BOOK', new_book_path %>
 </button>
-
