--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
 
   <body>
   <%= render 'layouts/navbar' %>
-  <div class="container">
+  <%# <div class="container"> %>
     <%= yield %>
-    </div>
+    <%# </div> %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= render 'layouts/footer' %>
