--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,18 @@
-<div class="container">
-  <div clas="image1"></div>
-    <h1>Welcome to Book Me!</h1>
-    <p>Unlock Worlds Through Book Rentals</p>
-    <%# <button class="btn btn-primary">Find a book</button> %>
-    <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
-  Find a book
-</button>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+  <!-- Other meta tags, CSS links, etc. -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap">
+</head>
+<body>
+  <!-- Your HTML content -->
+  <div class="b-container image1 p-0 m-0">
+      <h1>Welcome to Book Me!</h1>
+      <p>Unlock Worlds Through Book Rentals</p>
+      <%# <button class="btn btn-primary">Find a book</button> %>
+      <button type="button" class="btn btn-light" data-toggle="button" aria-pressed="false" autocomplete="off">
+    Find a Book
+  </button>
+  </div>
+</body>
+</html>
