--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -7,5 +7,5 @@
 <% end %>
 
 <button class="btn btn-dark">
-  <%= link_to 'ALL BOOKS', @books %>
+  <%= link_to 'BACK TO ALL BOOKS', books_path %>
 </button>
