--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,11 +1,21 @@
 <h1>ALL BOOKS</h1>
 
-<% @books.each do |book| %>
-  <%= link_to book.title, book_path(book) %>
-  <%= book.author %>
-  <%  book.user_id %>
-<% end %>
 
-<button class="btn btn-success">
+
+<div class="row d-flex justify-content-start">
+
+<button class="btn btn-success col-3">
   <%= link_to 'POST A BOOK', new_book_path %>
 </button>
+
+  <% @books.each do |book| %>
+  <div class="card col-3">
+    <div class="card-body d-flex flex-column">
+
+      <h5 class="card-title"><%= link_to book.title, book_path(book) %></h5>
+      <p class="card-text">  <%= book.author %></p>
+
+    </div>
+  </div>
+  <% end %>
+</div>
