--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,15 @@
-<%= @book.title %>
-<%= @book.author %>
+<h1><%= @book.title %></h1>
+<h2><%= @book.author %></h2>
+
+<%= simple_form_for [@book, @rental]  do |f| %>
+  <%= f.input :start_date, as: :date %>
+  <%= f.input :end_date, as: :date %>
+  <%= f.submit class: "btn btn-warning m-2" %>
+<% end %>
+
+<button class="btn btn-dark  m-2">
+  <%= link_to 'ALL BOOKS', books_path %>
+</button>
+
+
+<%= link_to "Rent the book",  book_rentals_path(@book) %>
