--- a/app/views/rentals/new.html.erb
+++ b/app/views/rentals/new.html.erb
@@ -1,8 +1,7 @@
 <h1>New Rental</h1>
 
-<%= simple_form_for @rental do |f| %>
-  <%= form.input :date, as: :date %>
-
+<%= simple_form_for [@rental, @book] do |f| %>
+  <%= f.input :date, as: :date %>
   <%= f.submit class: "btn btn-warning m-2" %>
 <% end %>
 
