This commits updates on rentals and general routes

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,5 +13,4 @@
 </button>
 
 
-<%= link_to "Rent the book",  book_rentals_path(@book) %>
-
+<%# <%= link_to "Rent the book",  book_rentals_path(@book) %>
