--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,7 +9,7 @@
           <%= link_to "Home", "/", class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "My Rentals", "#", class: "nav-link" %>
+          <%= link_to "My Rentals", rentals_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Add Book", new_book_path, class: "nav-link" %>
