--- a/app/views/rentals/new.html.erb
+++ b/app/views/rentals/new.html.erb
@@ -1,10 +1,10 @@
 <h1>New Rental</h1>
 
-<%= simple_form_for [@rental, @book] do |f| %>
-  <%= f.input :date, as: :date %>
-  <%= f.submit class: "btn btn-warning m-2" %>
-<% end %>
+<%# <%= simple_form_for [@rental, @book] do |f| %>
+  <%# <%= f.input :date, as: :date %>
+  <%# <%= f.submit class: "btn btn-warning m-2" %>
+<%# <% end %>
 
-<button class="btn btn-dark  m-2">
-  <%= link_to 'ALL BOOKS', books_path %>
-</button>
+<%# <button class="btn btn-dark  m-2"> %>
+  <%# <%= link_to 'ALL BOOKS', books_path %>
+<%# </button> %>
