--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,11 +2,12 @@
 <div class="navbar fixed-top navbar-expand-lg p-0">
 
   <div class="container-fluid">
+  <%= link_to "BookMe", "/", class: "nav-link" %>
     <div class="ms-auto" id="navbarSupportedContent">
       <ul class="navbar-nav">
       <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to "Home", "/", class: "nav-link" %>
+          <%= link_to "Find a Book", "/books", class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "My Rentals", rentals_path, class: "nav-link" %>
@@ -19,6 +20,7 @@
         </li>
       <% else %>
         <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+        <%= link_to "Sign-up", new_user_registration_path, class: "nav-link" %>
       <% end %>
       </ul>
     </div>
