This commits rentals filters and edit

--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -11,7 +11,7 @@
             <p class="card-text"><%= rental.book.author %></p>
             <p class="card-text"><%= rental.start_date %></p>
             <p class="card-text"><%= rental.end_date %></p>
-            <a href= <%= book_path(rental.book) %> class="btn btn-primary">Rent details!</a>
+            <a href= <%= book_path(rental.book) %> class="btn btn-primary">Edit dates</a>
           </div>
         </div>
       </div>
