--- a/app/views/rentals/new.html.erb
+++ b/app/views/rentals/new.html.erb
@@ -1,4 +1,9 @@
-<h1>New Rental</h1>
+<%# We move the new rental form to the book show page %>
+
+
+
+
+<%# <h1>New Rental</h1> %>
 
 <%# <%= simple_form_for [@rental, @book] do |f| %>
   <%# <%= f.input :date, as: :date %>
