updated navbar, updated books index page, added cards, seeded 10 users with 5 books each

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -41,7 +41,7 @@ body{
     line-height: 1.2;
   }
   p {
-    color: white;
+    // color: white;
     margin-left: 100px;
     font-family: 'Roboto regular', sans-serif;
     font-size: 20px;
