--- a/app/views/layouts/_addbook.html.erb
+++ b/app/views/layouts/_addbook.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for(book) do |f| %>
   <%= f.input :title %>
-  <%= f.input :author %>r
+  <%= f.input :author %>
+  <%= f.input :image_url %>
   <%= f.submit %>
 <% end %>
