--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -3,6 +3,7 @@
 <%= simple_form_for @book do |f| %>
   <%= f.input :title %>
   <%= f.input :author %>
+  <%= f.input :image_url %>
   <%= f.submit class: "btn btn-warning" %>
 <% end %>
 
