homepage image body

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
   </head>
 
   <body>
-  <%= render 'layouts/navbar' %>
-    <%= yield %>
+    <div class="container">
+      <%= render 'layouts/navbar' %>
+        <%= yield %>
+    </div>
   </body>
 </html>
