--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
   <!-- Other meta tags, CSS links, etc. -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap">
 </head>
-<body>
+<body class="banner" style="background-image: url(https://images.unsplash.com/photo-1561871733-40a3338b8cb4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=770&q=80)">
   <!-- Your HTML content -->
   <div class="b-container image1 p-0 m-0">
       <h1>Welcome to Book Me!</h1>
