edited books index, formatted cards, added search bar, formatted buttons

--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -15,7 +15,7 @@
     margin-bottom: 20px;
   }
 
-  .btn {
+  .button {
     background-color: #FFBA08 !important;
     border: none;
     border-radius: 100px;
