--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,4 @@
 .image1 {
-
   height: 100vh;
   width: 100vw;
   background-position: center;
@@ -29,24 +28,20 @@
     // box-shadow: 10%;
   }
 }
-body{
-  h1 {
-    color: white;
-    font-size: 50px;
-    font-family: 'Roboto', sans-serif;
-    margin-top: 150px;
-    margin-left: 100px;
-    margin-bottom: 0.5rem;
-    font-weight: 45px;
-    line-height: 1.2;
-  }
-  p {
-    // color: white;
-    margin-left: 100px;
-    font-family: 'Roboto regular', sans-serif;
-    font-size: 20px;
-  }
-}
+
+// body{
+//   h1 {
+//     color: white;
+//     font-size: 50px;
+//     font-family: 'Roboto', sans-serif;
+//     margin-top: 150px;
+//     margin-left: 100px;
+//     margin-bottom: 0.5rem;
+//     font-weight: 45px;
+//     line-height: 1.2;
+//   }
+// }
+
 .navbar > .container-fluid {
   min-height: 2rem;
   background-color: #563D7C;
