--- a/app/assets/stylesheets/pages/_signup.scss
+++ b/app/assets/stylesheets/pages/_signup.scss
@@ -15,8 +15,8 @@
     margin-bottom: 20px;
   }
 
-  .btn {
-    background-color: #FFBA08 !important;
+  .button {
+    background-color: #FFBA08;
     border: none;
     border-radius: 100px;
   }
