--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
                 input_html: { autocomplete: "new-password" } %>
   </div>
 
-  <div class="form-actions btn btn-primary">
+  <div class="form-actions button">
     <%= f.button :submit, "Sign up" %>
   </div>
 <% end %>
