--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
       <h1>Welcome to Book Me!</h1>
       <p>Unlock Worlds Through Book Rentals</p>
       <%# <button class="btn btn-primary">Find a book</button> %>
-      <button type="button" class="btn btn-light" data-toggle="button" aria-pressed="false" autocomplete="off">
+      <button type="button" class="btn" data-toggle="button" aria-pressed="false" autocomplete="off">
     Find a Book
   </button>
   </div>
