--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,11 +1,12 @@
-<h1>ALL BOOKS</h1>
 
-  <div class="row d-flex justify-content-space evenly">
-  <div class="col-2 btn btn-primary me-auto mt-3 mb-3"><%= link_to 'POST A BOOK', new_book_path %></div>
+<h1>ALL BOOKS</h1>
+  <div class="row d-flex justify-content-center">
+
+  <div class="col-2 button-bm mt-3 mb-3"><%= link_to 'POST A BOOK', new_book_path %></div>
 
   <form class="d-flex" role="search">
         <input class="form-control" type="search" placeholder="Search by title..." aria-label="Search">
-        <button class="btn btn-primary" type="submit">Search</button>
+        <button class="button-bm" type="submit">Search</button>
   </form>
 
 <% @books.each do |book| %>
@@ -15,7 +16,7 @@
         <div class="card-body" style="overflow:hidden;">
           <p class="card-title"><strong><%= book.title %></strong></p>
           <p class="card-text"><%= book.author %></p>
-          <button class="btn btn-primary"><%= link_to "book details", book_path(book) %></button>
+          <button class="button-bm"><%= link_to "book details", book_path(book) %></button>
         </div>
       </div>
     </div>
