--- a/app/views/layouts/_calendar.html.erb
+++ b/app/views/layouts/_calendar.html.erb
@@ -1,6 +1,10 @@
-<%= simple_form_for [book, rental]  do |f| %>
-  <%= f.input :start_date, as: :string, label: "FOR HOW LONG WILL YOU WANT ME?",
-            input_html: { data: { controller: "datepicker" } } %>
+<div>
 
-  <%= f.submit class: "btn btn-warning" %>
-<% end %>
+  <%= simple_form_for [book, rental]  do |f| %>
+    <%= f.input :start_date, as: :string, label: "FOR HOW LONG WILL YOU WANT ME?",
+              input_html: { data: { controller: "datepicker" } } %>
+
+    <%= f.submit class: "btn btn-warning" %>
+  <% end %>
+
+</div>
