--- a/app/assets/stylesheets/pages/_signup.scss
+++ b/app/assets/stylesheets/pages/_signup.scss
@@ -15,11 +15,12 @@
     margin-bottom: 20px;
   }
 
-  .btn {
-    background-color: #FFBA08 !important;
-    border: none;
-    border-radius: 100px;
-  }
+  // .button {
+  //   background-color: #FFBA08;
+  //   width: 100px;
+  //   border: none;
+  //   border-radius: 100px;
+  // }
   // .login {
   // }
 }
