--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,8 +20,8 @@
                 input_html: { autocomplete: "new-password" } %>
   </div>
 
-  <div class="form-actions btn btn-primary">
-    <%= f.button :submit, "Sign up" %>
+  <div class="form-actions">
+    <%= f.button :submit, "Sign up", class: "button-bm" %>
   </div>
 <% end %>
 
