--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 
-<div class="image-bg" >
+<div class="image-bg home" >
   <div class="b-container p-0 m-0" >
       <h1 class="h1-title">Welcome to Book Me!</h1>
       <h2 class="h2-homepage">Unlock Worlds Through Book Rentals</h2>
