--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -11,6 +11,7 @@
 .card{
   border-radius: 5px;
   box-shadow: 4px 2px 1px rgb(197, 196, 196);
+  height: 400px;
 }
 h1{
   font-size: 50px;
@@ -24,5 +25,5 @@ h1{
 
 a{
   text-decoration: none;
-  color: white;
+  // color: white;
 }
