--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @book.title %></h1>
 <h3><%= @book.author %></h3>
+<p><%= @book.synopsis %></p>
 
 <div class="d-flex justify-content-between">
   <div style="width: 50%;">
