updated a few css items in home

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,9 +1,5 @@
-<br>
-<h1>ALL BOOKS</h1>   <h1><%=link_to '+', new_book_path %></h1>
+<h1>ALL BOOKS </h1>
   <div class="row d-flex justify-content-center">
-
-
-
 
 <% @books.each do |book| %>
     <div class="col-4 align-items-stretch" >
