--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,11 +1,10 @@
 
 .home{
-  .image-bg {
   background-image: url(https://images.unsplash.com/photo-1561871733-40a3338b8cb4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=770&q=80);
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
-}
+
 
 .b-container {
   margin-top: 100px;
@@ -19,7 +18,7 @@
   margin-left: 93px !important;
 }
 
-.h1-title {
+h1 {
   color: white;
   font-size: 50px;
   font-family: $bm-font;
@@ -31,7 +30,7 @@
   text-shadow: 10%;
 }
 
-.h2-homepage {
+h2 {
   color: white;
   font-family: 'Roboto regular', sans-serif;
   font-size: 20px;
