working-on-footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,8 @@
       <%= render 'layouts/navbar' %>
         <%= yield %>
     </div>
+    <div>
+    <%= render 'layouts/footer' %>
+    </div>
   </body>
 </html>
