--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,4 +3,6 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
-@import "card"
+@import "card";
+@import "footer";
+@import "button";
