my books, your books, all books

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,7 +9,7 @@
         <button class="button-bm" type="submit">Search</button>
   </form>
 
-<% @books.each do |book| %>
+<% @notmybooks.each do |book| %>
     <div class="col-4 align-items-stretch" >
       <div class="card" style="width: 24rem; height: 100;">
       <img src="<%= book.image_url %>" class="card-img-top" alt="...">
