--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,9 +1,9 @@
 
 .image-bg {
-  background-image: url(https://images.unsplash.com/photo-1561871733-40a3338b8cb4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=770&q=80);
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url(https://images.pexels.com/photos/2898170/pexels-photo-2898170.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .b-container {
@@ -23,7 +23,7 @@
   font-size: 50px;
   font-family: $bm-font;
   font-weight: 700;
-  margin-top: 150px;
+  margin-top: 180px;
   margin-bottom: 0.5rem;
   font-weight: 45px;
   line-height: 1.2;
@@ -37,8 +37,8 @@
 }
 
 .navbar > .container-fluid {
-  min-height: 2rem;
-  background-color: #563D7C;
+  min-height: 4rem;
+  background-color:white;
   box-shadow: 0 0.5rem 1rem rgba(0,0,0,.05), inset 0 -1px 0 rgba(0,0,0,.1);
   .sticky {
     position: fixed;
@@ -47,11 +47,11 @@
   }
 }
 .navbar-expand-lg .navbar-collapse {
-  background-color: #563D7C;
+  background-color:white;
 }
 
 a.nav-link{
-  color: white;
-  background-color:#563D7C ;
+  color: black;
+  background-color:white ;
   text-decoration: none;
 }
