--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,6 @@
 <div class="footer">
-  <div class="footer-links">
+<div class="container footer-content">
+  <div class=" footer-links">
     <a href="https://www.lewagon.com/"><i class="fab fa-github"></i></a>
     <a href="https://www.lewagon.com/"><i class="fab fa-instagram"></i></a>
     <a href="https://www.lewagon.com/"><i class="fab fa-facebook"></i></a>
@@ -9,5 +10,6 @@
 
   <div class="footer-copyright">
      <p>&copy; <%= Time.current.year %> BookMe. All rights reserved.</p>
+  </div>
   </div>
 </div>
