--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,20 +5,17 @@
     <div class="ms-auto" id="navbarSupportedContent">
       <ul class="navbar-nav">
       <% if user_signed_in? %>
-        <li class="nav-item">
-          <%= link_to "Find a Book", "/books", class: "nav-link" %>
+       <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            My Account
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <li><%= link_to "Find a Book", "/books", class: "nav-link"%></li>
+            <li><%= link_to "My Rentals", rentals_path, class: "nav-link" %></li>
+            <li><%= link_to "Add Book", new_book_path, class: "nav-link" %></li>
+             <li><%= link_to "Log out", destroy_user_session_path, class: "nav-link", data: {turbo_method: :delete} %></li>
+          </ul>
         </li>
-        <li class="nav-item">
-          <%= link_to "My Rentals", rentals_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Add Book", new_book_path, class: "nav-link" %>
-        </li>
-          <li class="nav-item">
-          <%= link_to "Log out", destroy_user_session_path, class: "nav-link", data: {turbo_method: :delete} %>
-        </li>
-
-        
 
       <% else %>
               <%= link_to "Login", new_user_session_path, class: "nav-link" %>
