--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -32,7 +32,8 @@
 
 .h2-homepage {
   color: white;
-  font-family: 'Roboto regular', sans-serif;
+  font-family: 'Kumbh Sans', "sans-serif";
+  // font-weight: 900;
   font-size: 20px;
 }
 
