--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,9 @@
 <div class="navbar fixed-top navbar-expand-lg p-0">
 
   <div class="container-fluid">
-  <%= link_to "BookMe", "/", class: "nav-link" %>
+    <%= link_to  "/", class: "nav-link" do %>
+      <i class="fa-solid fa-book-open-reader"></i> BookMe
+    <% end %>
     <div class="ms-auto" id="navbarSupportedContent">
       <ul class="navbar-nav">
       <% if user_signed_in? %>
