--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
       <%# <button class="btn btn-primary">Find a book</button> %>
 
       <button type="button" class="btn btn-light button-bm" data-toggle="button" aria-pressed="false" autocomplete="off">
-    Find a Book
+    Find a Book here
   </button>
 
   </div>
