updated book show page, formatted

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -4,6 +4,7 @@
       <%= simple_form_for @book do |f| %>
       <%= f.input :title %>
       <%= f.input :author %>
+      <%= f.input :synopsis %>
       <%= f.input :image_url %>
       <%= f.submit class: "btn btn-warning" %>
     <% end %>
