--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -2,21 +2,23 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 60px;
+  height: 40px;
   background: #563D7C;
   color: white;
 
   .footer-copyright{
     text-align: right;
-    margin-top:15px;
+    margin-top:10px;
+    margin-bottom: 10px;
   }
 
   .footer-links{
-    margin-top:15px;
+    margin-top:10px;
     text-align: center;
+    margin-bottom: 5px;
     i {
       color: white;
-      font-size: 24px;
+      font-size: 18px;
     }
   }
   .footer-content{
