homepage, navbar, footer, image, design

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,8 +3,8 @@
   bottom: 0;
   width: 100%;
   height: 60px;
-  background: #563D7C;
-  color: white;
+  background: white;
+  color: lightslategrey;
 
   .footer-copyright{
     text-align: right;
@@ -15,7 +15,7 @@
     margin-top:15px;
     text-align: center;
     i {
-      color: white;
+      color: lightslategray;
       font-size: 24px;
     }
   }
