--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-
+</div>
 <div class="home" >
   <div class="b-container p-0 m-0" >
       <h1 class="h1">Welcome to Book Me!</h1>
@@ -12,3 +12,4 @@
 
   </div>
 </div>
+<div>
