--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar > .container-fluid {
-  min-height: 2rem;
-  background-color: #563D7C;
+  min-height: 4rem;
+  background-color: white;
   box-shadow: 0 0.5rem 1rem rgba(0,0,0,.05), inset 0 -1px 0 rgba(0,0,0,.1);
   .sticky {
     position: fixed;
@@ -9,11 +9,20 @@
   }
 }
 .navbar-expand-lg .navbar-collapse {
-  background-color: #563D7C;
+  background-color: white;
 }
 
 a.nav-link{
-  color: white;
-  background-color:#563D7C ;
+  color: black;
+  background-color:white ;
   text-decoration: none;
+}
+
+.nav-link {
+  font-size: 14px;
+}
+
+.icon-text {
+  font-size: 16px;
+  font-weight: bold;
 }
