--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,12 +1,10 @@
 // Import Google fonts
-// @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
-// @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;900&family=Roboto:ital,wght@0,400;0,700;0,900;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Montserrat&display=swap');
 
 // Define fonts for body and headers
-$body-font: 'Kumbh Sans', "sans-serif";
-$headers-font: 'Kumbh Sans', "sans-serif";;
-$bm-font: 'Kumbh Sans', "sans-serif";
+$body-font: 'Montserrat', sans-serif;
+$headers-font: 'Montserrat', sans-serif;
+$bm-font: 'Montserrat', sans-serif;
 
 
 
