--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,9 +1,9 @@
 
 .home{
-  background-image: url(https://images.unsplash.com/photo-1561871733-40a3338b8cb4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=770&q=80);
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url(https://images.pexels.com/photos/2898170/pexels-photo-2898170.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
 
   .b-container {
   margin-top: 100px;
@@ -21,7 +21,7 @@ h1 {
   color: white;
   font-size: 50px;
   font-family: $bm-font;
-  font-weight: 700;
+  font-weight: 900;
   margin-top: 180px;
   margin-bottom: 0.5rem;
   font-weight: 45px;
@@ -31,8 +31,8 @@ h1 {
 
 h2 {
   color: white;
-  font-family: 'Kumbh Sans', "sans-serif";
-  // font-weight: 900;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
   font-size: 20px;
 }
 
