--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,6 +1,4 @@
-
 <div class="rentals">
-<%@user %>
   <% current_user.rentals_as_owner.each do |rental| %>
     <div class="rental">
       <div class='rental-left'>
@@ -11,18 +9,18 @@
             <%= rental.user.email %>
           </div>
           <div class="rental-info-details">
-            <%= rental.start_date.strftime('%l:%M %p') %> - <%= rental.end_date.strftime('%l:%M %p') %>
+            <%= rental.start_date.strftime('%d.%m') %> - <%= rental.end_date.strftime('%d.%m') %>
           </div>
         </div>
       </div>
       <div class="rental-actions">
         <% if rental.pending? %>
           <%= simple_form_for [rental.book, rental] do |f| %>
-            <%= f.input :status, as: :hidden, input_html: { value: 'accepted'} %>
+            <%= f.input :status, as: :hidden, input_html: { value: 'Accepted'} %>
             <%= f.submit 'Accept', class: 'btn btn-info' %>
           <% end %>
           <%= simple_form_for [rental.book, rental] do |f| %>
-            <%= f.input :status, as: :hidden, input_html: { value: 'rejected'} %>
+            <%= f.input :status, as: :hidden, input_html: { value: 'Rejected'} %>
             <%= f.submit 'Reject', class: 'btn btn-light' %>
           <% end %>
         <% else %>
