--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,8 +6,7 @@
       <%# <button class="btn btn-primary">Find a book</button> %>
 
       <button type="button" class="btn btn-light button-bm" data-toggle="button" aria-pressed="false" autocomplete="off">
-    Find a Book
-     <%# <i class="fa-solid fa-book-open-reader"></i> %>
+    <%= link_to "Find a Book", "/books", class: "nav-link"%>
   </button>
 
   </div>
