--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,10 +5,15 @@
       <h2 class="h2">Unlock Worlds Through Book Rentals</h2>
       <%# <button class="btn btn-primary">Find a book</button> %>
 
-      <button type="button" class="btn btn-light button-bm" data-toggle="button" aria-pressed="false" autocomplete="off">
-    Find a Book
+      <%# <button type="button" class="btn btn-light button-bm" data-toggle="button" aria-pressed="false" autocomplete="off"> %>
+        <%= link_to "Find my Book", books_path, class: "btn btn-light button-bm" %>
      <%# <i class="fa-solid fa-book-open-reader"></i> %>
-  </button>
+
+  <%# </button> %>
+  <%# <button></button>
+  <a href=""></a>
+  <%= link_to %>
+  <%# <%= butt_to %>
 
   </div>
 </div>
