--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,9 +15,8 @@
 @import "components/button";
 @import "components/form";
 @import "components/card";
-@import "components/footer";
+// @import "components/footer";
 @import "pages/books_index";
 
 @import "pages/pages_profile";
 @import "pages/books_show";
-
