--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer">
+<%# <div class="footer">
 <div class="container footer-content">
   <div class=" footer-links">
     <a href="https://www.lewagon.com/"><i class="fab fa-github"></i></a>
@@ -9,7 +9,7 @@
   </div>
 
   <div class="footer-copyright">
-     <p>&copy; <%= Time.current.year %> BookMe. All rights reserved.</p>
+     <p>&copy; Time.current.year  BookMe. All rights reserved.</p>
   </div>
   </div>
-</div>
+</div> %>
