--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,11 +2,12 @@
   min-height: 4rem;
   background-color: white;
   box-shadow: 0 0.5rem 1rem rgba(0,0,0,.05), inset 0 -1px 0 rgba(0,0,0,.1);
-  .sticky {
-    position: fixed;
-    top: 0;
-    // width: 100%;
-  }
+  // .sticky {
+  //   position: fixed;
+  //   top: 0;
+  //   // width: 100%;
+  // }
+  z-index: 100;
 }
 .navbar-expand-lg .navbar-collapse {
   background-color: white;
