button link to page final

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,9 @@
   <div class="b-container p-0 m-0" >
      <h1 class="h1">Welcome to Book Me!</h1>
      <h2 class="h2">Unlock Worlds Through Book Rentals</h2>
-       <%= link_to "Find a Book", "/books", class: "nav-link"%>
+
+       <%= link_to "Find my Book", books_path, class: "btn btn-light button-bm" %>
+
   </div>
 </div>
 <div>
