--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,33 +1,55 @@
+<div class="container mt-5 pt-5">
+  <ul class="nav nav-tabs" id="myTab" role="tablist">
+    <li class="nav-item" role="presentation">
+      <button class="nav-link active" id="Pending Requests-tab" data-bs-toggle="tab" data-bs-target="#Pending Requests-tab-pane" type="button" role="tab" aria-controls="Pending Requests-tab-pane" aria-selected="true">Pending Requests</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="My Books-tab" data-bs-toggle="tab" data-bs-target="#My Books-tab-pane" type="button" role="tab" aria-controls="My Books-tab-pane" aria-selected="false">My Books</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="My Rentals-tab" data-bs-toggle="tab" data-bs-target="#My Rentals-tab-pane" type="button" role="tab" aria-controls="My Rentals-tab-pane" aria-selected="false">My Rentals</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane" type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false" disabled>Disabled</button>
+    </li>
+  </ul>
+  <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="pending-requests-tab-pane" role="tabpanel" aria-labelledby="pending-requests-tab" tabindex="0">aaa</div>
+    <div class="tab-pane fade" id="my-books-tab-pane" role="tabpanel" aria-labelledby="my-books-tab" tabindex="0">bbb</div>
+    <div class="tab-pane fade" id="my-rentals-tab-pane" role="tabpanel" aria-labelledby="my-rentals-tab" tabindex="0">ccc</div>
+    <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0">ddd</div>
+  </div>
 
-<div class="rentals">
-  <% current_user.rentals_as_owner.each do |rental| %>
-    <div class="rental">
-      <div class='rental-left'>
-        <!-- if you're using cloudinary and activestorage -->
-        <%# <%= cl_image_tag rental.user.photo, class: 'avatar-bordered' %>
-        <div class="rental-info">
-          <div class="rental-info-title">
-            <%= rental.user.email %>
+    <div class="rentals">
+      <% current_user.rentals_as_owner.each do |rental| %>
+        <div class="rental">
+          <div class='rental-left'>
+            <!-- if you're using cloudinary and activestorage -->
+            <%# <%= cl_image_tag rental.user.photo, class: 'avatar-bordered' %>
+            <div class="rental-info">
+              <div class="rental-info-title">
+                <%= rental.user.email %>
+              </div>
+              <div class="rental-info-details">
+                <%= rental.start_date %> - <%= rental.end_date %>
+              </div>
+            </div>
           </div>
-          <div class="rental-info-details">
-            <%= rental.start_date %> - <%= rental.end_date %>
+          <div class="rental-actions">
+            <% if rental.pending? %>
+              <%= simple_form_for [rental.book, rental] do |f| %>
+                <%= f.input :status, as: :hidden, input_html: { value: 'Accepted'} %>
+                <%= f.submit 'Accept', class: 'btn btn-info' %>
+              <% end %>
+              <%= simple_form_for [rental.book, rental] do |f| %>
+                <%= f.input :status, as: :hidden, input_html: { value: 'Rejected'} %>
+                <%= f.submit 'Reject', class: 'btn btn-light' %>
+              <% end %>
+            <% else %>
+              <p class='rental-tag'><%= rental.status %></p>
+            <% end %>
           </div>
         </div>
-      </div>
-      <div class="rental-actions">
-        <% if rental.pending? %>
-          <%= simple_form_for [rental.book, rental] do |f| %>
-            <%= f.input :status, as: :hidden, input_html: { value: 'Accepted'} %>
-            <%= f.submit 'Accept', class: 'btn btn-info' %>
-          <% end %>
-          <%= simple_form_for [rental.book, rental] do |f| %>
-            <%= f.input :status, as: :hidden, input_html: { value: 'Rejected'} %>
-            <%= f.submit 'Reject', class: 'btn btn-light' %>
-          <% end %>
-        <% else %>
-          <p class='rental-tag'><%= rental.status %></p>
-        <% end %>
-      </div>
+      <% end %>
     </div>
-  <% end %>
 </div>
