working on rentals index card

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,12 @@
 <h1>All Books <%=link_to icon('fa-solid', 'circle-plus'), new_book_path %> </h1>
-
+<i class="fa-solid fa-magnifying-glass"></i>
   <%= form_with url: books_path, method: :get, class: "d-flex" do %>
     <%= text_field_tag :query,
       params[:query],
       class: "form-control",
-      placeholder: "search for a book..."%>
+      style: "border-radius: 20px; width: 1250px;",
+      placeholder: "search"
+      %>
   <% end %>
 
 <div class="row d-flex justify-content-center">
